# ai-trusted-carpool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  LICENSE  NOTICE  README.en.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-desktop.yml  codeql.yml  webrtc-e2e.yml
deploy/coordinator/: package.json  server.js
deploy/coordinator/test/: coordinator.test.js
design/: README.md
docs/: ARCHITECTURE.md  BUSINESS-MODEL.md  CLEAN-ROOM.md  PRICING-SOURCES.md  PRODUCT-BRIEF.md  RELEASE.md  SELF-HOSTING.md
docs/releases/: v0.0.5-test.1.md  v0.0.5.md  v0.0.6-test.1.md  v0.0.6.md  v0.0.7.md  v0.0.8.md
e2e/: run-browser-webrtc.mjs  webrtc-harness.html  webrtc-harness.ts
scripts/: build-linux-docker.sh  build-macos-universal.sh  build-windows-cross.sh  classify-release-ref.mjs  classify-release-ref.test.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  test-windows-startup.ps1  verify-updater-artifacts.mjs  verify-updater-artifacts.test.mjs
scripts/linux/: Dockerfile
src/: AccountManager.test.tsx  AccountManager.tsx  App.install.test.tsx  App.test.tsx  App.tsx  AppUpdater.test.tsx  AppUpdater.tsx  DebugPanel.test.tsx  DebugPanel.tsx  StartupReady.tsx  api.test.ts  api.ts  debugLog.test.ts  debugLog.ts  i18n.test.ts  i18n.ts  main.test.tsx  main.tsx  styles.css  tauriInvoke.ts  trustedWebRtc.test.ts  trustedWebRtc.ts  types.ts  webrtcWire.test.ts  webrtcWire.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.distribution.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_pool.rs  account_quota.rs  account_router.rs  account_transfer.rs  app_updater.rs  client_launcher.rs  client_process.rs  commands.rs  coordinator.rs  crypto.rs  diagnostics.rs  identity.rs  join_link.rs  lib.rs  local_proxy.rs  main.rs  models.rs  pricing.rs  protocol.rs  quota.rs  relay.rs  ride_history.rs  runtime.rs  status_tray.rs  terminal_launcher.rs  tool_installer.rs  tool_provisioner.rs  usage.rs  usage_history.rs
