[package]
name = "trusted-carpool-desktop"
version = "0.1.0"
description = "One-click trusted carpool for Claude Code and Codex"
authors = ["CNAIGC"]
edition = "2021"

[lib]
name = "trusted_carpool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bytes = "1"
dirs = "6"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
