[package]
name = "trusted-carpool-desktop"
version = "0.0.7"
description = "One-click trusted carpool for Claude Code and Codex"
authors = ["CNAIGC"]
edition = "2021"

[lib]
name = "trusted_carpool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bytes = "1"
dirs = "6"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
flate2 = "1.1.9"
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
